# broker-server-v2

./: .editorconfig  .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
bot/: __main__.py  notify.py
bot/command_handlers/: __init__.py  commands.py
bot_register/: __main__.py  test.py
bot_register/command_handlers/: __init__.py  commands.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
hihi/: __init__.py  __main__.py  __rocketry__.py  conftest.py  settings.py
hihi/data/: predefined_indicators.json
hihi/db/: config.py
hihi/db/dao/: dummy_dao.py  predefined_indicator_dao.py  predefined_param_dao.py  predefined_return_dao.py  stock_dao.py  strategy_dao.py  user_dao.py
hihi/db/migrations/models/: 14_20230706102553_update.py  7_20230704104153_update.py  9_20230704104431_update.py
hihi/db/models/: __init__.py  indicator_model.py  predefined_indicator_model.py  predefined_return_model.py  user_model.py
hihi/services/: __init__.py
hihi/services/redis/: lifetime.py
hihi/tests/: __init__.py  test_dummy.py
hihi/utils/: predefined_data.py
hihi/utils/auth/: __init__.py
hihi/utils/ssi/: DataClient.py  DataStream.py  __init__.py  config.py
hihi/web/: __init__.py  application.py  lifetime.py
hihi/web/api/: __init__.py  router.py
hihi/web/api/auth/: __init__.py  views.py
hihi/web/api/dummy/: __init__.py  views.py
hihi/web/api/echo/: __init__.py  views.py
hihi/web/api/indicator/: __init__.py  views.py
hihi/web/api/monitoring/: __init__.py
hihi/web/api/predefined_indicator/: __init__.py  views.py
hihi/web/api/price/: __init__.py  views.py
hihi/web/api/redis/: __init__.py  views.py
hihi/web/api/stock/: __init__.py  views.py
hihi/web/api/strategy/: __init__.py  views.py
marketstream/: __main__.py  notify.py
marketstream/ssi/: DataClient.py  DataStream.py  __init__.py  config.py
server/: __main__.py  __rocketry__.py  conftest.py  settings.py
server/db/: config.py
server/db/dao/: condition.py  dummy.py  dummy_dao.py  indicator.py  param.py  predefined_indicator.py  predefined_indicator_dao.py  predefined_param.py  predefined_param_dao.py  predefined_return.py  predefined_return_dao.py  stock.py  stock_dao.py  strategy.py  strategy_dao.py  telegram.py  user.py  user_dao.py
server/db/models/: condition.py  condition_model.py  dummy_model.py  indicator.py  indicator_model.py  param.py  param_model.py  predefined_indicator.py  predefined_param.py  predefined_param_model.py  predefined_return.py  stock.py  strategy.py  strategy_model.py  telegram.py  telegram_model.py  user.py  whatsapp.py
server/services/: __init__.py
server/services/redis/: dependency.py  lifetime.py
server/tests/: test_dummy.py
server/utils/: indicators.py  predefined_data.py
server/utils/TechnicalAnalysis/: __init__.py
server/utils/auth/: __init__.py  password.py
server/utils/ssi/: DataClient.py  DataStream.py  __init__.py  config.py
server/utils/start_up/: __init__.py
server/web/: __init__.py  application.py  lifetime.py
server/web/api/: __init__.py  router.py
server_v2/db/dao/: predefined_indicator_dao.py
server_v2/web/api/: router.py
(+2194 files in other folders)
